k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitemaisonepouvante-ui
  namespace: petitemaisonepouvante
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petitemaisonepouvante-ui
  template:
    metadata:
      labels:
        app: petitemaisonepouvante-ui
    spec:
      containers:
      - name: ui
        image: petitemaisonepouvante.ui:latest
        imagePullPolicy: Never  # CRUCIAL : Force K8s à utiliser ton image locale
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: petitemaisonepouvante-ui
  namespace: petitemaisonepouvante
spec:
  selector:
    app: petitemaisonepouvante-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
