k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petitemaisonepouvante-ingress
  namespace: petitemaisonepouvante
spec:
  ingressClassName: nginx  # Remplace l'ancienne annotation kubernetes.io/ingress.class
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: petitemaisonepouvante-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petitemaisonepouvante-ui
            port:
              number: 80
